stoped the bots from 'moving' after the game is finished. The player can't move anymore after the game is finished and he went to the pause menu and back.

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,6 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 *.orig
+Assets/Scripts/Behaviours/AttackBehaviour.cs.orig.meta
+Assets/Scripts/Soldier/Player/Player.cs.orig.meta
+Assets/Scripts/Manager/TeamManager.cs.orig.meta
