Final unit tests for SearchBehaviour

--- a/Assets/Scripts/Editor/UnitTests/SearchBehaviour/SearchBehaviour.asmdef
+++ b/Assets/Scripts/Editor/UnitTests/SearchBehaviour/SearchBehaviour.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "SearchBehaviour",
     "references": [
-        "ScriptsAssembly"
+        "ScriptsAssembly",
+        "Mirror"
     ],
     "optionalUnityReferences": [
         "TestAssemblies"
